--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ pandas==2.1.4
 numpy==1.26.3
 matplotlib==3.8.2
 seaborn==0.13.1
-prophet==1.1.5
 scikit-learn==1.4.0
 plotly==5.18.0
 streamlit==1.31.0
@@ -13,3 +12,8 @@ jupyter==1.0.0
 pytest==7.4.0
 scipy==1.11.4
 pillow==10.2.0
+plotly>=5.18.0
+matplotlib>=3.8.0
+seaborn>=0.13.0
+prophet>=1.1.5
+scipy>=1.11.0
