--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,15 @@
-pandas==2.1.4
-numpy==1.26.3
-matplotlib==3.8.2
-seaborn==0.13.1
-scikit-learn==1.4.0
-plotly==5.18.0
-streamlit==1.31.0
-openpyxl==3.1.2
-sqlalchemy==2.0.20
-python-dotenv==1.0.0
-jupyter==1.0.0
-pytest==7.4.0
-scipy==1.11.4
-pillow==10.2.0
-plotly>=5.18.0
+pandas>=2.2.0
+numpy>=1.26.0
 matplotlib>=3.8.0
 seaborn>=0.13.0
-prophet>=1.1.5
+scikit-learn>=1.4.0
+plotly>=5.18.0
+streamlit>=1.31.0
+openpyxl>=3.1.0
+sqlalchemy>=2.0.0
+python-dotenv>=1.0.0
+jupyter>=1.0.0
+pytest>=7.4.0
 scipy>=1.11.0
+pillow>=10.2.0
+prophet>=1.1.5
